tests/golden/type_errors/import_struct_method_wrong_argument.cd
import "../import_struct_method_direct/lib.cd";
let p: Point = Point { x: 1, y: 2 };
print p.sum(1);
