tests/golden/type_errors/import_struct_method_wrong_argument.err
Type error at <repo>/tests/golden/type_errors/import_struct_method_wrong_argument.cd:3:14: expected 0 arguments but got 1
  print p.sum(1);
               ^
